added new templates or presentation in 16:9 format; see #63724

--- a/l10n/PresentationPowerpoint.csv
+++ b/l10n/PresentationPowerpoint.csv
@@ -1,9 +1,12 @@
 key,de-DE,en-US,it-IT,es-ES,ru-RU,pl-PL,cs-CZ
 presentation.powerpoint.download.manager.button.menu|text,Powerpoint...,Powerpoint...,Powerpoint,Powerpoint,,,
 presentation.powerpoint.download.manager.form.label.template,Format,Format,,,,,
-presentation.powerpoint.download.manager.form.template.default.pptx,Standard 4:3,Standard 4:3,Standard 4:3,Standard 4:3,,,
-presentation.powerpoint.download.manager.form.template.default-white.pptx,Weiß 4:3,White 4:3,,,,,
-presentation.powerpoint.download.manager.form.template.default-black.pptx,Schwarz 4:3,Black 4:3,,,,,
+presentation.powerpoint.download.manager.form.template.default-4-3.pptx,Standard 4:3,Standard 4:3,Standard 4:3,Standard 4:3,,,
+presentation.powerpoint.download.manager.form.template.default-white-4-3.pptx,Weiß 4:3,White 4:3,,,,,
+presentation.powerpoint.download.manager.form.template.default-black-4-3.pptx,Schwarz 4:3,Black 4:3,,,,,
+presentation.powerpoint.download.manager.form.template.default.pptx,Standard 16:9,Standard 16:9,Standard 16:9,Standard 16:9,,,
+presentation.powerpoint.download.manager.form.template.default-white.pptx,Weiß 16:9,White 16:9,,,,,
+presentation.powerpoint.download.manager.form.template.default-black.pptx,Schwarz 16:9,Black 16:9,,,,,
 presentation.powerpoint.download.manager.form.hint,In einer Powerpoint werden nur Bilder exportiert. Andere Formate werden mit einem Standbild exportiert.,The export for Powerpoint does only support pictures. Other formats will be exported as freeze image.,,,,,
 presentation.powerpoint.download.manager.form.label.quality,Qualität,Quality,,,,,
 presentation.powerpoint.download.manager.form.quality.10000,Beste Qualität (Original),High Quality (Original),,,,,
